<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App4Beer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dash">My events</string>
    <string name="create_event">Create Event</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="event_name_hint">Event name...</string>
    <string name="event_location_hint">Event location...</string>
    <string name="description_hint">Description...</string>
    <string name="send">Send</string>
    <string name="creat_event_add_participants_btn">Add Participants</string>
    <string name="creat_new_group_btn">Create new group</string>
    <string name="blank_date">___  /  ___  / ___</string>
    <string name="blank_hour">____  :  ____</string>
    <string name="title_activity_event_manager">EventManager</string>
    <string name="attending_prompt">aaaaaa</string>
    <string name="attendingYes">Of course!</string>
    <string name="attendingMaybe">Maybe</string>
    <string name="attendingNo">Not going =(</string>
    <string name="EventManager_are_you_coming">So, are you coming?</string>
    <string name="title_activity_manage_groups">MainActivity</string>
    <string name="title_activity_view_group">MainActivity</string>
    <string name="title_activity_edit_group">MainActivity</string>
    <string name="groups">Groups:</string>
    <string name="contacts">Contacts:</string>
    <string name="title_activity_choose_date_of">ChooseDateOfActivity</string>
    <string name="title_activity_choose_participants">ChooseParticipantsActivity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_choose_time_of">ChooseTimeOfActivity</string>
    <string name="title_activity_attending_dialog">AttendingDialog</string>
    <string name="title_activity_main">MainActivity</string>

</resources>