<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AttendingDialog" >

     <RadioGroup
        android:id="@+id/radioAttendingStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
            android:id="@+id/attendingRadioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendingYes" 
            android:checked="true" />
 
        <RadioButton
            android:id="@+id/attendingRadioMaybe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendingMaybe" />
 
        <RadioButton
            android:id="@+id/attendingRadioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendingNo" />
                
    </RadioGroup>
    
         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >

        <Button
            android:id="@+id/attending_status_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/attending_status_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>
 

</LinearLayout>
