<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createEventLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_margin="5dp"
        tools:context=".CreateEventActivity" >

        <EditText
            android:id="@+id/eventName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name_hint"
			android:layout_marginTop="20dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/eventDescription"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:ems="10"
            android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
            android:hint="@string/description_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/eventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/blank_date"
                android:inputType="date" />

            <EditText
                android:id="@+id/eventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/blank_hour"
                android:inputType="time" />

        </LinearLayout>

        <Button
            android:id="@+id/eventAddParticipantsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="20dp"
			android:layout_marginBottom="20dp"
            android:text="@string/creat_event_add_participants_btn"
            style="@style/ButtonText"/>



    </LinearLayout>
    
    <ImageButton
        android:id="@+id/sendBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/send_event" />
    
</FrameLayout>
