<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManageGroupsActivity" >

    <Button
            android:id="@+id/createNewGroupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/creat_new_group_btn"
            style="@style/ButtonText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groups"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/no_groups_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(you have no groups)"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <ListView
        android:id="@+id/events_group_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <TextView
        android:id="@+id/contactsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts" />

    <ListView
        android:id="@+id/choose_contact_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
